Update map fuzz test + improve FuzzingRunner